--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,24 @@
     tools:context=".MainActivity">
 
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/resetSuggestions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:focusable="true"
+        android:scaleType="center"
+        app:backgroundTint="@android:color/background_light"
+        app:layout_constraintEnd_toStartOf="@+id/btn_exit0"
+        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_refresh_black_24dp" />
+
     <ImageView
         android:id="@+id/btn_exit"
         android:layout_width="50dp"
@@ -42,9 +60,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_exit">
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/suggestion4"
-            style="@style/suggestionStyle"
+        <com.github.florent37.shapeofview.shapes.BubbleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -52,72 +70,104 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/suggestion2"
-            tools:text="TextView" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestion2Container"
+            app:shape_bubble_arrowHeight="10dp"
+            app:shape_bubble_arrowPosition="left"
+            app:shape_bubble_arrowWidth="10dp"
+            app:shape_bubble_borderRadius="20dp">
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/suggestion3"
-            style="@style/suggestionStyle"
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/suggestion4"
+                style="@style/suggestionStyle"
+                android:background="@color/bubble_color"
+                tools:text="TextView" />
+        </com.github.florent37.shapeofview.shapes.BubbleView>
+
+
+        <com.github.florent37.shapeofview.shapes.BubbleView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="TextView" />
+            app:shape_bubble_arrowHeight="10dp"
+            app:shape_bubble_arrowPosition="left"
+            app:shape_bubble_arrowWidth="10dp"
+            app:shape_bubble_borderRadius="20dp">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/suggestion3"
+                style="@style/suggestionStyle"
+                android:background="@color/bubble_color"
+                tools:text="TextView" />
+        </com.github.florent37.shapeofview.shapes.BubbleView>
+
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="56dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_img_icon_humanmen"
             tools:ignore="ContentDescription" />
 
-        <TextView
-            android:id="@+id/suggestion1"
-            style="@style/suggestionStyle"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestion2"
-            tools:text="TextView" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/suggestion2"
-            style="@style/suggestionStyle"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="TextView" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/resetSuggestions"
+        <com.github.florent37.shapeofview.shapes.BubbleView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:backgroundTint="@android:color/background_light"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/suggestion4"
-            app:layout_constraintStart_toEndOf="@+id/suggestion1"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:srcCompat="@drawable/ic_refresh_black_24dp" />
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestion2Container"
+            app:shape_bubble_arrowHeight="10dp"
+            app:shape_bubble_arrowPosition="right"
+            app:shape_bubble_arrowWidth="10dp"
+            app:shape_bubble_borderRadius="20dp">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/suggestion1"
+                style="@style/suggestionStyle"
+                android:background="@color/bubble_color"
+                tools:text="TextView" />
+        </com.github.florent37.shapeofview.shapes.BubbleView>
+
+        <com.github.florent37.shapeofview.shapes.BubbleView
+            android:id="@+id/suggestion2Container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shape_bubble_arrowHeight="10dp"
+            app:shape_bubble_arrowPosition="right"
+            app:shape_bubble_arrowWidth="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:shape_bubble_borderRadius="20dp">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/suggestion2"
+                style="@style/suggestionStyle"
+                android:background="@color/bubble_color"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="TextView" />
+
+        </com.github.florent37.shapeofview.shapes.BubbleView>
+
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -192,7 +242,6 @@
             app:layout_constraintEnd_toStartOf="@+id/dialogFlow"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/pepperTxt" />
-
 
 
     </android.support.constraint.ConstraintLayout>
