--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
     <color name="unselected_category_gray">#e0e0e0</color>
     <color name="close_gray">#f5f5f5</color>
     <color name="disabled_text_gray">#9e9e9e</color>
+    <color name="white">#fff</color>
+    <color name="bubble_color">#FFF9C4</color>
+
 </resources>
